--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,12 @@ project(MyOpenGL)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package( OpenGL REQUIRED )
-
-include_directories( ${OPENGL_INCLUDE_DIRS} )
+find_package(GLEW 2.1 REQUIRED)
 
 set( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
 set( GLFW_INSTALL OFF CACHE BOOL  "GLFW lib only" )
+
+include_directories( ${OPENGL_INCLUDE_DIRS} )
 
 add_subdirectory(dependencies/glfw)
 
@@ -21,7 +22,7 @@ set( MyOpenGL-SRC
         )
 
 add_executable( MyOpenGL WIN32 ${MyOpenGL-SRC} )
-target_link_libraries( MyOpenGL ${OPENGL_LIBRARIES} glfw )
+target_link_libraries( MyOpenGL ${OPENGL_LIBRARIES} glfw GLEW::GLEW)
 if( MSVC )
     if(${CMAKE_VERSION} VERSION_LESS "3.6.0")
         message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'MyOpenGL' as StartUp Project in Visual Studio.\n" )
