--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,6 @@ find_package( OpenGL REQUIRED )
 set( GLFW_BUILD_DOCS OFF CACHE BOOL  "GLFW lib only" )
 set( GLFW_INSTALL OFF CACHE BOOL  "GLFW lib only" )
 
-include_directories( ${OPENGL_INCLUDE_DIRS} )
 
 add_subdirectory(dependencies/glfw)
 add_subdirectory(dependencies/glad)
@@ -19,10 +18,14 @@ endif()
 
 set( MyOpenGL-SRC
         src/main.cpp
-        )
+        src/Renderer.cpp
+        src/VertexBuffer.cpp
+        src/IndexBuffer.cpp)
 
 add_executable( MyOpenGL WIN32 ${MyOpenGL-SRC} )
 target_link_libraries( MyOpenGL ${OPENGL_LIBRARIES} glfw glad)
+target_include_directories(MyOpenGL PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
 if( MSVC )
     if(${CMAKE_VERSION} VERSION_LESS "3.6.0")
         message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMake and rerun; OR\n\t - Manually set 'MyOpenGL' as StartUp Project in Visual Studio.\n" )
