Added 2D Texture test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,10 @@ set(MyOpenGL-SRC
         src/vendor/imgui/imgui_widgets.cpp
         src/vendor/imgui/imgui_impl_glfw.cpp
         src/vendor/imgui/imgui_impl_opengl3.cpp
+        src/tests/Test.cpp
         src/tests/TestClearColor.cpp
-        src/tests/Test.cpp)
+        src/tests/TestTexture2D.cpp
+        )
 
 add_executable(MyOpenGL WIN32 ${MyOpenGL-SRC})
 target_link_libraries(MyOpenGL ${OPENGL_LIBRARIES} glfw glad glm)
